fixed input flickering issue

--- a/plugins/bootstrap-5.0.2-dist/css/bootstrap.css
+++ b/plugins/bootstrap-5.0.2-dist/css/bootstrap.css
@@ -2165,7 +2165,7 @@ progress {
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 }
 @media (prefers-reduced-motion: reduce) {
   .form-control {
